# knapsack-packing

./: .pre-commit-config.yaml  README.md  pyproject.toml
KnapsackPacking/: circle.py  common_algorithm_functions.py  ellipse.py  evolutionary.py  greedy.py  problem_experiments.py  problem_solution.py  reversible.py  shape_functions.py  solve_problem.py
KnapsackPacking/algorithms/: evolutionary.py  greedy.py  problem_solution.py  reversible.py
KnapsackPacking/examples/: examples.py
KnapsackPacking/shapes/: circle.py  shape_functions.py
Output/Problems/Packing/Comparison/: experiments.pickle
